test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/redeclare_fun_as_file_scope_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(foo)
  (
  void
  )
  ;
  int
  identifier(foo)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
